--- a/photo-effects/public/index.html
+++ b/photo-effects/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Photo Effects</title>
+    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
